# Fed-GWAS

./: .gitignore  404.html  README.md  README_synthetic_data.md  Readme_pipeline.md  bluprint.md  generate_synthetic_data.py  index.html  individual_missing.fam  main.py  main_client.py  main_server.py  main_simulation.py  mkdocs.yml  pyproject.toml  requirements_synthetic.txt  syn_data_instruction.md
Flower/: AssociationClient.py  AssociationServer.py  Client.py  KinshipClient.py  KinshipServer.py  Server.py  qcServer.py
archived/Flower/: AssociationClient.py  AssociationServer.py  qcClient.py  qcServer.py
archived/fedgwas/: parameters.py
archived/my-project/: README.md  pyproject.toml
association/: association.py
centers/center_1/: config.yaml
centers/center_2/: config.yaml
configs/: config.yaml
configs/center_1/: config.yaml
configs/center_2/: config.yaml
docs/: index.md
docs/user-guide/: kinship.md  pipeline.md  quality_control.md
fedgwas/: parameters.py
fedgwas/association/: association.py
fedgwas/io/: reader.py
fedgwas/kinship/: kinship.py
fedgwas/quality_control/: qc.py  qc_utils.py
kinship/: kinship.py
pipeline/: 0321.pptx  Pipeline.md  Readme.md  client_app.py  main_client.py  main_server.py  requirement.txt  server_app.py  sync_stage_analysis.md
pipeline/clients/: base_client.py  data_loder.py  iterative_king.py  iterative_lr.py  local_qc.py  logger_manager.py
pipeline/server/: aggregator_qc.py  prg_masking.py  strategy.py  strategy_new.py
pipeline/simulated_data/: generate_test_scenarios.py
pipeline/utils/: bloom_filter.py  client_data_loader.py
prd/: PRG_MASKING_USAGE.md  Pipeline.md  README_synthetic_data.md  bluprint_update.md  exerpiements.md  requirements_synthetic.txt  tasks.md  test_plan.md
search/: search_index.json
tests/: test_association.py  test_kinship.py  test_prg_masking.py  test_qc.py  test_quality_control.py  test_reader.py  test_synthetic_data.py
user-guide/association_analysis/: index.html
user-guide/kinship/: index.html
user-guide/quality_control/: index.html
(+56 files in other folders)
