[tool.poetry]
name = "fedgwas"
version = "0.0.1"
description = "fedgwas"
authors = ["idsla"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
pytest = "^8.2.2"
isort = "^5.13.2"
flake8-docstrings = "^1.7.0"
pre-commit = "^3.7.1"
mypy = "^1.10.1"
pylint = "^3.2.5"
tox = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
