[project]
name = "fedgwas"
version = "0.0.1"
description = "fedgwas"
authors = [{name = "idsla"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=2.2.2",
    "mkdocs>=1.6.1",
    "flwr>=1.11.1",
    "pysnptools>=0.5.13",
    "pandas-plink>=2.3.1",
    "pyplink>=1.3.7",
    "phe>=1.5.0",
    "pycryptodomex>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "pytest>=8.2.2",
    "isort>=5.13.2",
    "flake8-docstrings>=1.7.0",
    "pre-commit>=3.7.1",
    "mypy>=1.10.1",
    "pylint>=3.2.5",
    "tox>=4.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
